--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,167 @@
 
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  background-color: #f6f8fc;
+  margin: 0;
+  padding-bottom: 1rem; 
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  width: 100%;
+  max-width: 990px; 
+  padding: 1rem;
+}
+
+h1 {
+  color: #2d2d2d;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+}
+
+
+.pokemons {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-gap: 1rem;
+  list-style: none;
+  padding: 0;
+}
+
+.pokemon {
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 1rem;
+  color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.pokemon .number {
+  color: #000;
+  opacity: 0.3;
+  text-align: right;
+  font-size: 0.7rem;
+  font-weight: 700;
+}
+
+.pokemon .name {
+  color: #2d2d2d;
+  margin-bottom: 0.25rem;
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.pokemon .details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pokemon .details .types {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.pokemon .details .type {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  margin-bottom: 0.25rem;
+  text-align: left;
+  color:rgb(255, 255, 255);
+  background-color:rgba(113, 159, 250, 0.65);
+}
+.pokemon .details .img {
+  max-width: 100%;
+  height: auto;
+  align-self: flex-end;
+}
+
+.pokemon .details img {
+  max-width: 100%;
+  height: auto;
+  align-self: flex-end;
+  max-width: 100px;
+  height: 100px;
+}
+
+
+.grass {
+  background-color: #70cf57;
+}
+
+.poison {
+  background-color: #aa5599;
+}
+
+.fire {
+  background-color: #ff4422;
+}
+
+.water {
+  background-color: #3399ff;
+}
+
+.bug {
+  background-color: #aabb22;
+}
+
+.normal {
+  background-color: #aaaa99;
+}
+
+.electric{
+  background-color: #ffcc33;
+}
+
+.ground{
+  background-color: #ddbb55;
+}
+.fairy{
+  background-color: #ee99ee;
+}
+.fighting{
+  background-color: #bb5544;
+}
+.psychic{
+  background-color: #ff5599;
+}
+.rock{
+  background-color: #bbaa66;
+}
+.ghost{
+  background-color: #6666bb;
+}
+.ice{
+  background-color: #77ddff;
+}
+.dragon{
+  background-color: #7766ee;
+}
+.dark{
+  background-color: #775544;
+}
+.steel{
+  background-color: #aaaabb;
+}
+
+.flying{
+  background: linear-gradient(180deg,#699cff,#8eacff);
+}
+
+@media (max-width: 600px) {
+  .pokemons {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
